# fogt_zajecia_zintegrowane

./: pyproject.toml  rozwiazanie.ipynb
